# streamdeck-oxide-homeassistant

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  config.yaml  flake.nix
examples/: streamdeck_homeassistant.rs
src/: config.rs  hass.rs  lib.rs  plugins.rs
src/plugins/: rgb.rs
